[doc] Created doc/requirements for documentation requirements.

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,5 @@ commands=
 [testenv:doc]
 basepython=python3.4
 changedir=doc
-deps=
-  sphinx
+deps=-rdoc/requirements.txt
 commands=sphinx-build -b html . _build/html
