--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
 basepython=python3.4
 deps=pylint
 commands=
-  pylint sphinxcontrib --rcfile=pylintrc
+  pylint sphinxcontrib test --rcfile=pylintrc
   pylint sphinxcontrib/packages/data/bin/list_modules.py --rcfile=pylintrc
 
 [testenv:doc]
