--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-#envlist = py27, py32, py34, lint, doc
-envlist = py34, lint, doc
+#envlist = py27, py32, py34, py35, lint, doc
+envlist = py34, py35, lint, doc
 
 [testenv]
 commands = {envpython} setup.py test
