--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 #envlist = py27, py32, py34, py35, lint, doc
-envlist = py34, py35, lint, doc
+envlist = py34, py35, lint, doc, coverage
 
 [testenv]
 commands = {envpython} setup.py test
@@ -23,3 +23,10 @@ basepython=python3.4
 changedir=doc
 deps=-rdoc/requirements.txt
 commands=sphinx-build -b html . _build/html
+
+[testenv:coverage]
+deps=coverage
+basepython=python3.4
+commands=
+    coverage run --source packages -m unittest
+    coverage report
