--- a/tox.ini
+++ b/tox.ini
@@ -18,15 +18,12 @@ commands=
   pylint sphinxcontrib test --rcfile=pylintrc
   pylint sphinxcontrib/packages/data/bin/list_modules.py --rcfile=pylintrc
 
-[testenv:doc]
-basepython=python3.4
-changedir=doc
-deps=-rdoc/requirements.txt
-commands=sphinx-build -b html . _build/html
-
 [testenv:coverage]
-deps=coverage
+deps=
+    coverage
+    -rdoc/requirements.txt
+changedir=doc
 basepython=python3.4
 commands=
-    coverage run --source packages -m unittest
+    coverage run --source sphinxcontrib.packages -m sphinx -b html . _build/html
     coverage report
