[test] Remove documentation test (it is tested in coverage test anyway)

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-#envlist = py27, py32, py34, py35, lint, doc
-envlist = py34, py35, lint, doc, coverage
+envlist = py34, py35, lint, coverage
 
 [testenv]
 commands = {envpython} setup.py test
