--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py34, py35, lint, coverage
+envlist = py34, py35, py36, lint, coverage
 
 [testenv]
 commands = {envpython} setup.py test
