--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ image: paternal/pythons
 tox:
   script:
     - tox
-  coverage: '/^TOTAL.*\s(\d+)\%$/'
+  coverage: '/.*sphinxcontrib-packages.*\s(\d+)\%$/'
