[test] Drop python3.4 tests

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py34, py35, py36, lint, coverage
+envlist = py35, py36, lint, coverage
 
 [testenv]
 commands = {envpython} setup.py test
 deps =
 
 [testenv:lint]
-basepython=python3.4
+basepython=python3
 deps=pylint
 commands=
   pylint sphinxcontrib test --rcfile=pylintrc
@@ -22,7 +22,7 @@ deps=
     coverage
     -rdoc/requirements.txt
 changedir=doc
-basepython=python3.4
+basepython=python3
 commands=
     coverage run --source sphinxcontrib.packages -m sphinx -b html . _build/html
     coverage report
