--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, lint, coverage
+envlist = py35, py36, lint, coverage, black
 
 [testenv]
 commands = {envpython} setup.py test
@@ -26,3 +26,11 @@ basepython=python3
 commands=
     coverage run --source sphinxcontrib.packages -m sphinx -b html . _build/html
     coverage report
+
+[testenv:black]
+deps=black
+basepython=python3
+setenv =
+    LC_ALL=C.UTF-8
+    LANG=C.UTF-8
+commands=black --check --verbose .
