Add python3.7 and python3.8 support; Drop python3.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 88
-# py36 = true # Uncomment if py36 (or above) only
+target-version = ['py35', 'py37', 'py38']
 exclude = '''
 /(
     \.git
