--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{35,37,38,py} lint, coverage, black
+envlist = py{35,37,38,py3}, lint, coverage, black
 
 [testenv]
 commands = {envpython} setup.py test
