[tox] pylinrcfile has moved

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,8 @@ deps =
 basepython=python3
 deps=pylint
 commands=
-  pylint sphinxcontrib test --rcfile=pylintrc
-  pylint sphinxcontrib/packages/data/bin/list_modules.py --rcfile=pylintrc
+  pylint sphinxcontrib test
+  pylint sphinxcontrib/packages/data/bin/list_modules.py
 
 [testenv:coverage]
 deps=
