[setup] Replace setup.py with setup.cfg, and include python package in the generated package
Closes #9

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,42 @@
-[wheel]
-python-tag = py3
+[metadata]
+name = sphinxcontrib-packages
+version = 1.1.0
+author = Louis Paternault
+author_email = spalax@gresille.org
+license = AGPLv3 or any later version
+description = This packages contains the Packages sphinx extension, which provides directives to display packages installed on the host machine
+keywords = sphinx package system
+url = https://framagit.org/spalax/sphinxcontrib-packages
+project_urls =
+    Documentation = http://packages.readthedocs.io
+    Source = https://framagit.org/spalax/sphinxcontrib-packages
+    Tracker = https://framagit.org/spalax/sphinxcontrib-packages/issues
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+classifiers =
+        Development Status :: 5 - Production/Stable
+        Framework :: Sphinx :: Extension
+        Intended Audience :: Developers
+        Intended Audience :: System Administrators
+        License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
+        Operating System :: Unix
+        Programming Language :: Python :: 3
+        Programming Language :: Python :: 3.7
+        Programming Language :: Python :: 3.8
+        Programming Language :: Python :: 3.9
+        Programming Language :: Python :: 3.10
+        Programming Language :: Python :: 3.11
+        Topic :: Documentation :: Sphinx
+        Topic :: Software Development :: Libraries :: Python Modules
+
+[options]
+packages = sphinxcontrib.packages
+zip_safe = True
+include_package_data = True
+python_requires = >=3.7, <4
+install_requires =
+  distro
+  sphinx
+
+[bdist_wheel]
+python-tag=py3
