[test] Update deprecated command

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py{37,38,39,310,311,312,313,py3}, lint, coverage, black
 
 [testenv]
-commands = {envpython} setup.py test
+commands = {envpython} -m unittest
 deps =
 
 [testenv:lint]
